source/blender/io/wavefront_obj/importer/obj_import_file_reader.hh
@@ -41,7 +41,7 @@ class OBJParser {
   Span<std::string> mtl_libraries() const;
 
  private:
-  void add_mtl_library(const std::string &path);
+  void add_mtl_library(StringRef path);
   void add_default_mtl_library();
 };
 
@@ -57,7 +57,7 @@ class MTLParser {
   /**
    * Open material library file.
    */
-  MTLParser(StringRef mtl_library_, StringRefNull obj_filepath);
+  MTLParser(StringRefNull mtl_library_, StringRefNull obj_filepath);
 
   /**
    * Read MTL file(s) and add MTLMaterial instances to the given Map reference.
